methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: type mismatch;
 found   : Int(0)
 required: Boolean
  var vuebiscuit : Boolean = 0
                             ^MethodsReturning:10: error: not found: value vueBiscuit
  if(!estSurBiscuit()){vueBiscuit=1}
                       ^