methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  
  var vuebiscuit : Boolean = 0
  
  while (!estSurBiscuit())
  {
    forward()
  }
  
  if(!estSurBiscuit()){vueBiscuit=1}
  
  while (getX() !=0)
  {
    backward()
  }
  
  return vuebiscuit
}